# Serlo-Markup-Prototype

./: .gitignore  INSTALL.adoc  LICENSE  README.adoc  serlo-markup.cabal
doc/: Makefile  serlo2adoc.1.adoc
executables/: serlo2adoc.hs
helper/: fetch-article-content.py  fetch-article.py
src/: SerloJSON.hs  SerloModel.hs  SerloSourcePP.hs  SerloSourceParse.hs  SerloText.hs
src/Serlo/: Encode.hs  Markup.hs  Model.hs  Text.hs
src/Serlo/Internal/: Model.hs  Text.hs
src/Serlo/Markup/: ModelToMarkup.hs  TextToMarkup.hs  ToMarkup.hs
src/Serlo/Model/: FromJSON.hs  ToJSON.hs
src/Serlo/Text/: FromJSON.hs  ToJSON.hs
src/Text/AsciiDoc/: Encode.hs  Parser.hs  ToAsciiDoc.hs  Types.hs
src/Text/AsciiDoc/Encode/: Block.hs  Generic.hs  Header.hs  Text.hs
src/Text/AsciiDoc/Parser/: Block.hs  Generic.hs  Header.hs  Text.hs
src/Text/AsciiDoc/Types/: Block.hs  Generic.hs  Header.hs  Text.hs
