cabal-version:       >=1.10

name:                serlo-markup
version:             0.1.0.0
-- synopsis:
-- description:
bug-reports:         https://github.com/gruenerBogen/Serlo-Markup-Prototype/issues
license:             BSD3
license-file:        LICENSE
author:              Lukas
maintainer:          lukas.b@mailbox.org
build-type:          Simple
extra-source-files:  README.adoc

library
  hs-source-dirs: src
  exposed-modules:
    Serlo.Model
    Serlo.Text
    Text.AsciiDoc.Encode
    Text.AsciiDoc.Encode.Text
    Text.AsciiDoc.Types
    Text.AsciiDoc.Parser
  other-modules:
    Serlo.Model.ToJSON
    Serlo.Model.FromJSON
    Serlo.Internal.Model
    Serlo.Internal.Text
    Serlo.Text.FromJSON
    Serlo.Text.ToJSON
    Text.AsciiDoc.Types.Generic
    Text.AsciiDoc.Types.Header
    Text.AsciiDoc.Types.Text
    Text.AsciiDoc.Types.Block
    Text.AsciiDoc.Parser.Generic
    Text.AsciiDoc.Parser.Header
    Text.AsciiDoc.Parser.Text
    Text.AsciiDoc.Parser.Block
  build-depends:
    base                 >= 4.14 && < 4.15,
    aeson                >= 1.5 && < 1.6,
    text                 >= 1.2.3.0 && < 1.3,
    unordered-containers >= 0.2.13.0 && < 0.3,
    vector               >= 0.12.0.1 && < 0.13,
    pretty               >= 1.1.3.6 && < 1.2,
    parsec               >= 3.1.14.0 && < 3.2
  default-language: Haskell2010
